@@ -22,17 +22,16 @@ package org.jenetics.internal.util;
 import static java.util.Arrays.stream;
 import static java.util.stream.Stream.concat;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Optional;
 import java.util.stream.Stream;
-
-import org.jenetics.util.ISeq;
 
 /**
  * Helper methods concerning Java reflection.
  *
  * @author <a href="mailto:franz.wilhelmstoetter@gmx.at">Franz Wilhelmstötter</a>
  * @since 1.6
- * @version 3.0
+ * @version !__version__!
  */
 public class reflect {
 	private reflect() {require.noInstance();}
@@ -66,8 +65,12 @@ public class reflect {
 	@SuppressWarnings("unchecked")
 	public static <T> Optional<T> newInstance(final Class<?> type) {
 		try {
-			return Optional.of((T)type.newInstance());
-		} catch (InstantiationException | IllegalAccessException e) {
+			return Optional.of((T)type.getConstructor().newInstance());
+		} catch (NoSuchMethodException |
+				InvocationTargetException |
+				InstantiationException |
+				IllegalAccessException e)
+		{
 			return Optional.empty();
 		}
 	}
